// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PodDetails should match snapshot with container based pod and with multiple containers 1`] = `
<body>
  <div>
    <div
      class="pl-4 pb-4 pt-3 pr-20 relative"
    >
      <a
        class="cursor-pointer transition duration-100 font-medium inline-flex flex-center gap-1 text-sky-500 hover:text-sky-600 text-sm absolute top-2 right-2"
        href="/organization//project//environment//logs/1/live-logs"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550 gap-2"
          type="button"
        >
          <span>
            Logs
            <span
              class="icon-solid-scroll shrink-0 "
              role="img"
            />
          </span>
        </button>
      </a>
      <div
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="flex gap-1 overflow-x-auto whitespace-nowrap"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:rm:-content-pod-container-1"
            aria-selected="true"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:rm:-trigger-pod-container-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="absolute flex items-center justify-center"
            >
              <div
                class="w-1.5 h-1.5 rounded-full mr-1 bg-green-500"
              />
              pod-container-1
            </span>
            <span
              class="invisible flex items-center justify-center"
            >
              <div
                class="w-1.5 h-1.5 rounded-full mr-1 bg-green-500"
              />
              pod-container-1
            </span>
          </button>
          <button
            aria-controls="radix-:rm:-content-pod-container-2"
            aria-selected="false"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="inactive"
            id="radix-:rm:-trigger-pod-container-2"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="absolute flex items-center justify-center"
            >
              <div
                class="w-1.5 h-1.5 rounded-full mr-1 bg-red-500"
              />
              pod-container-2
            </span>
            <span
              class="invisible flex items-center justify-center"
            >
              <div
                class="w-1.5 h-1.5 rounded-full mr-1 bg-red-500"
              />
              pod-container-2
            </span>
          </button>
        </div>
        <div
          class="mt-3"
        >
          <div
            aria-labelledby="radix-:rm:-trigger-pod-container-1"
            class="outline-0 relative"
            data-orientation="horizontal"
            data-state="active"
            id="radix-:rm:-content-pod-container-1"
            role="tabpanel"
            style="animation-duration: 0s;"
            tabindex="0"
          >
            <dl
              class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-y-0 gap-x-2"
            >
              <dt
                class="text-neutral-350 dark:text-neutral-300 col-span-2 mb-2"
              >
                Container image:
              </dt>
              <dd
                class="text-neutral-400 font-medium dark:text-white dark:font-normal flex gap-1 mb-2"
              >
                foobar-img
              </dd>
              <div
                class="relative flex flex-col items-center"
              >
                <div
                  class="grid gap-2 items-center"
                >
                  <svg
                    class="z-10 bg-neutral-550"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="8"
                      cy="8"
                      r="3.75"
                      stroke="#67778E"
                      stroke-width="1.5"
                    />
                  </svg>
                </div>
              </div>
              <dt
                class="text-neutral-350 dark:text-neutral-300"
              >
                Current status:
              </dt>
              <dd
                class="text-neutral-400 font-medium dark:text-white dark:font-normal"
              >
                <span
                  class="text-green-500"
                >
                  Running
                </span>
              </dd>
            </dl>
          </div>
          <div
            aria-labelledby="radix-:rm:-trigger-pod-container-2"
            class="outline-0 relative"
            data-orientation="horizontal"
            data-state="inactive"
            hidden=""
            id="radix-:rm:-content-pod-container-2"
            role="tabpanel"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PodDetails should match snapshot with git based pod and with last_terminated_state 1`] = `
<body>
  <div>
    <div
      class="pl-4 pb-4 pt-3 pr-20 relative"
    >
      <a
        class="cursor-pointer transition duration-100 font-medium inline-flex flex-center gap-1 text-sky-500 hover:text-sky-600 text-sm absolute top-2 right-2"
        href="/organization//project//environment//logs/1/live-logs"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550 gap-2"
          type="button"
        >
          <span>
            Logs
            <span
              class="icon-solid-scroll shrink-0 "
              role="img"
            />
          </span>
        </button>
      </a>
      <div
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="gap-1 overflow-x-auto whitespace-nowrap hidden"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:re:-content-pod-container-1"
            aria-selected="true"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:re:-trigger-pod-container-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="absolute flex items-center justify-center"
            >
              <div
                class="w-1.5 h-1.5 rounded-full mr-1 bg-green-500"
              />
              pod-container-1
            </span>
            <span
              class="invisible flex items-center justify-center"
            >
              <div
                class="w-1.5 h-1.5 rounded-full mr-1 bg-green-500"
              />
              pod-container-1
            </span>
          </button>
        </div>
        <div
          class="mt-3"
        >
          <div
            aria-labelledby="radix-:re:-trigger-pod-container-1"
            class="outline-0 relative"
            data-orientation="horizontal"
            data-state="active"
            id="radix-:re:-content-pod-container-1"
            role="tabpanel"
            style="animation-duration: 0s;"
            tabindex="0"
          >
            <dl
              class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-y-0 gap-x-2"
            >
              <div
                class="relative flex flex-col items-center"
              >
                <div
                  class="absolute min-h-full border-l border-neutral-350 left-1/2 -translate-x-1/2"
                />
                <div
                  class="grid gap-2 items-center"
                >
                  <svg
                    class="z-10 bg-neutral-550"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="8"
                      cy="8"
                      r="3.75"
                      stroke="#67778E"
                      stroke-width="1.5"
                    />
                  </svg>
                </div>
              </div>
              <dt
                class="text-neutral-350 dark:text-neutral-300 mb-2"
              >
                Current status:
              </dt>
              <dd
                class="text-neutral-400 font-medium dark:text-white dark:font-normal mb-2"
              >
                <span
                  class="text-green-500"
                >
                  Running
                </span>
              </dd>
              <div
                class="relative flex flex-col items-center"
              >
                <div
                  class="absolute min-h-full border-l border-neutral-350 left-1/2 -translate-x-1/2"
                />
                <div
                  class="grid gap-2"
                >
                  <svg
                    class="z-10 bg-neutral-550"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="8"
                      cy="8"
                      r="3.75"
                      stroke="#67778E"
                      stroke-width="1.5"
                    />
                  </svg>
                </div>
              </div>
              <dt
                class="text-neutral-350 dark:text-neutral-300"
              >
                10 Oct, 07:36:26
              </dt>
              <dd
                class="text-neutral-400 font-medium dark:text-white dark:font-normal"
              >
                Baz
                 (
                1
                ).
                 
                If you want to clear this warning state, redeploy the service.
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PodDetails should match snapshot with git based pod and without last_terminated_state 1`] = `
<body>
  <div>
    <div
      class="pl-4 pb-4 pt-3 pr-20 relative"
    >
      <a
        class="cursor-pointer transition duration-100 font-medium inline-flex flex-center gap-1 text-sky-500 hover:text-sky-600 text-sm absolute top-2 right-2"
        href="/organization//project//environment//logs/1/live-logs"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550 gap-2"
          type="button"
        >
          <span>
            Logs
            <span
              class="icon-solid-scroll shrink-0 "
              role="img"
            />
          </span>
        </button>
      </a>
      <div
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="gap-1 overflow-x-auto whitespace-nowrap hidden"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:r6:-content-pod-container-1"
            aria-selected="true"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:r6:-trigger-pod-container-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="absolute flex items-center justify-center"
            >
              <div
                class="w-1.5 h-1.5 rounded-full mr-1 bg-green-500"
              />
              pod-container-1
            </span>
            <span
              class="invisible flex items-center justify-center"
            >
              <div
                class="w-1.5 h-1.5 rounded-full mr-1 bg-green-500"
              />
              pod-container-1
            </span>
          </button>
        </div>
        <div
          class="mt-3"
        >
          <div
            aria-labelledby="radix-:r6:-trigger-pod-container-1"
            class="outline-0 relative"
            data-orientation="horizontal"
            data-state="active"
            id="radix-:r6:-content-pod-container-1"
            role="tabpanel"
            style="animation-duration: 0s;"
            tabindex="0"
          >
            <dl
              class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-y-0 gap-x-2"
            >
              <div
                class="relative flex flex-col items-center"
              >
                <div
                  class="grid gap-2 items-center"
                >
                  <svg
                    class="z-10 bg-neutral-550"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="8"
                      cy="8"
                      r="3.75"
                      stroke="#67778E"
                      stroke-width="1.5"
                    />
                  </svg>
                </div>
              </div>
              <dt
                class="text-neutral-350 dark:text-neutral-300"
              >
                Current status:
              </dt>
              <dd
                class="text-neutral-400 font-medium dark:text-white dark:font-normal"
              >
                <span
                  class="text-green-500"
                >
                  Running
                </span>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
